--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ path = "src/lib.rs"
 image = "0.25"
 
 # Apple frameworks bindings (pure Rust, no Swift)
-cidre = { version = "0.13", features = ["sc", "cg", "cv", "cm", "dispatch", "blocks", "async"] }
+# Using mediar-ai fork for compatibility with screenpipe dependencies
+cidre = { git = "https://github.com/mediar-ai/cidre.git", features = ["sc", "cg", "cv", "cm", "dispatch", "blocks", "async"] }
 
 # Error handling
 thiserror = "1.0"
